# farmgestor

./: .replit  DOCKER_README.md  Dockerfile  api_rotas.py  app.py  atualizar_banco.py  criar_estacoes_exemplo_rotas.py  docker-compose.yml  docker-entrypoint.sh  ftp info.txt  gerar_icone_vaca.py  gerar_requirements.py  instalar.html  instalar.php  instalar.sh  instalar_ruralsys_ftp.sh  install.py  lora_communication.py  main.py  migrar_db.py  models.py  pagina_estacoes.html  pyproject.toml  replit.nix  routes.py  simular_ambiente_completo.py  testar_api.py  testar_api_balanca.py  testar_api_estacao.py  testar_api_lora.py
