[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.39",
    "flask-wtf>=1.2.2",
    "xlsxwriter>=3.2.2",
    "pykml>=0.2.0",
    "tomli>=2.2.1",
    "lxml>=5.3.2",
    "requests>=2.32.3",
]
